--- a/Dropbox/MyProgram/src/MNTG_Server/.classpath
+++ b/Dropbox/MyProgram/src/MNTG_Server/.classpath
@@ -2,6 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="H:/PhD/Minnesota/Research/TrafficGenerator/TrafficGeneratorCode/TrafficGenerator/javamail-1.4.4/mail.jar"/>
+	<classpathentry kind="lib" path="lib/mail.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.15-bin.jar"/>
+	<classpathentry kind="lib" path="lib/gson-1.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
